--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             width: 2px;
             height: 2px;
             background-color: #fff;
-            opacity: 0.9;
+            opacity: 1;
         }
 
         .text-container {
@@ -34,10 +34,10 @@
         }
 
         .title {
-            font-size: 48px;
+            font-size: 100px; /* 48 */
             color: #fff;
             margin: 0;
-            margin-bottom: 8px;
+            margin-bottom: 0px; /* 8 */
         }
 
         .subtitle {
@@ -46,10 +46,9 @@
             margin: 0;
         }
 
-        p {
-          font-size: 24px;
+        a {
+          font-size: 15px;
           color: #fff;
-          margin: 0;
         }
 
     </style>
@@ -59,7 +58,10 @@
     <div class="text-container">
         <h1 class="title">i9o</h1>
         <p class="subtitle">i9o is memory company</p>
-        <p></p>
+        <br>
+        <a href="http://i9o.io/">About</a><br>
+        <a href="http://i9o.io/">Member</a><br>
+        <a href="http://i9o.io/">Company</a><br>
     </div>
     <script>
         const numSquares = 3000;
