--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             for (let i = 0; i < numSquares; i++) {
                 const square = createSquare();
                 const radius = 150 + Math.random() * 200; // 150 200  200 100
-                const angle = Math.random() * 2 * Math.PI; //2
+                const angle = Math.random() * 2 * Math.PI; //2 a
                 const speed = 0.001 + Math.random() * 0.008;
                 animateSquare(square, radius, angle, speed);
             }
