--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <h1 class="title">i9o</h1>
         <p class="subtitle">i9o is memory company</p>
         <br>
-        <a href="http://i9o.io/">About</a><br>
-        <a href="http://i9o.io/">Member</a><br>
-        <a href="http://i9o.io/">Company</a><br>
+        <a href="http://i9o.io/">🚧About</a><br>
+        <a href="http://i9o.io/">🚧Member</a><br>
+        <a href="http://i9o.io/">🚧Company</a><br>
     </div>
     <script>
         const numSquares = 3000;
