--- a/index.html
+++ b/index.html
@@ -37,18 +37,19 @@
             font-size: 100px; /* 48 */
             color: #fff;
             margin: 0;
-            margin-bottom: 0px; /* 8 */
         }
 
         .subtitle {
-            font-size: 24px;
+            font-size: 30px;
             color: #fff;
             margin: 0;
+            font-weight: bold;
         }
 
         a {
           font-size: 15px;
           color: #fff;
+          font-weight: bold;
         }
 
     </style>
@@ -57,11 +58,11 @@
 <body>
     <div class="text-container">
         <h1 class="title">i9o</h1>
-        <p class="subtitle">i9o is memory company</p>
+        <p class="subtitle">We are memory company.</p>
         <br>
-        <a href="http://i9o.io/">🚧About</a><br>
-        <a href="http://i9o.io/">🚧Member</a><br>
-        <a href="http://i9o.io/">🚧Company</a><br>
+        <a href="http://i9o.io/">About</a><a>  🚧</a><br>
+        <a href="http://i9o.io/">Member</a><a>  🚧</a><br>
+        <a href="http://i9o.io/">Company</a><a>  🚧</a><br>
     </div>
     <script>
         const numSquares = 3000;
