--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="text-container">
         <h1 class="title">i9o</h1>
-        <p class="subtitle">We are memory company.</p>
+        <p class="subtitle">We are memory company</p>
         <br>
         <a href="http://i9o.io/">About</a><a>  🚧</a><br>
         <a href="http://i9o.io/">Member</a><a>  🚧</a><br>
