--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p class="subtitle">We are memory company</p>
         <br>
         <a href="http://i9o.io/">About</a><a>  🚧</a><br>
-        <a href="http://i9o.io/">Member</a><a>  🚧</a><br>
+        <a href="http://i9o.io/team.html">Team</a><a>  🚧</a><br>
         <a href="http://i9o.io/">Company</a><a>  🚧</a><br>
     </div>
     <script>
