--- a/team.html
+++ b/team.html
@@ -8,11 +8,13 @@
     <link rel="icon" type="image/png" href="icon.png" sizes="152x152" />
     <link rel="stylesheet" href="style.css">
 
+
+
     <style>
         html, body {
             height: 100%;
             margin: 0;
-            background-color: black;
+            font-family: Arial, sans-serif;
         }
 
         #animation-container {
@@ -24,6 +26,8 @@
             overflow: hidden;
             height: 100%; /* 50 400px*/
             width: 100%;
+            background-color: black;
+            z-index: -1;
         }
 
         /**/
@@ -86,7 +90,7 @@
 </head>
 <body>
     <div class="text-container">
-        <h1 class="title"><a class="title" href="http://i9o.io/">i9o</a></h1>
+        <h1><a class="title" href="http://i9o.io/index.html">i9o</a></h1>
         <p class="subtitle">Introducing our team</p>
         <br>
         <br>
