--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
         <h3>iori kojima</h3>
         <br>
         <br>
-        <h4>Co-Founder・Lied Engineer</h4>
+        <h4>Co-Founder・Lead Engineer</h4>
         <h3>yusuke matsubayashi</h3>
 
 
