--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <h1 class="title">i9o</h1>
         <p class="subtitle">We are memory company</p>
         <br>
-        <a href="http://i9o.io/">About</a><a>  🚧</a><br>
-        <a href="http://i9o.io/team.html">Team</a><a>  🚧</a><br>
+        <a href="http://i9o.io/about.html">About</a><a>  🤯</a><br>
+        <a href="http://i9o.io/team.html">Team</a><a>  👨‍💻</a><br>
         <a href="http://i9o.io/">Company</a><a>  🚧</a><br>
     </div>
     <script>
