--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
         .iori {
             position: absolute;
-            top: 250px;
+            top: 240px;
             left: 30px;
             right: 50px;
         }
@@ -98,7 +98,7 @@
         }
 
         p {
-            font-size: 14px;
+            font-size: 15px;
             margin-top: 15px;
             margin-bottom: -5px;
             margin-right: -10px;
@@ -126,14 +126,14 @@
         <p>
             私たちはなぜ忘れるのだろうか。<br>
             私たちは日々、様々な情報や経験を記憶に刻む。<br>
-            しかし、時間が経つとともに、その記憶は薄れていく。
+            しかし、時間が経つとともに、その記憶は薄れていく。<br>
             大切な人の顔や名前、感動した出来事や言葉、学んだ知識や技術。<br>
             私たちはどれだけ忘れたくなくても、忘れてしまう。<br>
             忘れることで、自分のアイデンティティや価値観を失い、
             大切な人や物とのつながりを断ち切ってしまう。<br>
             <br>
             私たちは、「忘れる」という現象に対して受動的にではなく、
-            能動的に向き合う必要がある。
+            能動的に向き合う必要がある。<br>
             私たちは、「忘れる」ことをコントロールする必要がある。<br>
             <br>
             もし人々が物事を忘れなくなる世界がやってきたら、<br>
