--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             position: relative;
             height: 100vh;
             font-family: Arial, sans-serif;
+            overflow: hidden;
         }
 
         .square {
