--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             margin: 0;
             font-family: Arial, sans-serif;
             z-index: 0;
+            background-color: black;
         }
 
         canvas {
