--- a/about.html
+++ b/about.html
@@ -140,7 +140,9 @@
             世界はどう変わるのだろう。<br>
             <br>
             i9o inc.<br>
-            私たちは記憶の会社です。
+            私たちは記憶の会社です。<br>
+            <br>
+            <br>
         </p>
     </div>
 
