--- a/team.html
+++ b/team.html
@@ -53,6 +53,10 @@
             margin: 0;
         }
 
+        .iori2 {
+            font-size: 20px;
+        }
+
         .subtitle {
             font-size: 30px;
             color: #fff;
@@ -100,6 +104,14 @@
         <br>
         <h4>Co-Founder・Lead Engineer</h4>
         <h3>yusuke matsubayashi</h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h4>ヾ(๑╹◡╹)ﾉ"</h4>
+        <h3><a class="iori2" href="https://twitter.com/IoriKojima09">join us</a></h3>
+        <br>
+        <br>
 
 
     </div>
