--- a/about.html
+++ b/about.html
@@ -124,25 +124,68 @@
 
     <div class="iori">
         <p>
-            私たちはなぜ忘れるのだろうか。<br>
-            私たちは日々、様々な情報や経験を記憶に刻む。<br>
-            しかし、時間が経つとともに、その記憶は薄れていく。<br>
-            大切な人の顔や名前、感動した出来事や言葉、学んだ知識や技術。<br>
-            私たちはどれだけ忘れたくなくても、忘れてしまう。<br>
-            忘れることで、自分のアイデンティティや価値観を失い、
-            大切な人や物とのつながりを断ち切ってしまう。<br>
+            私たちはなぜ忘れるのだろうか。
+            <br><br>
+            脳は日々様々な情報や経験を記憶に刻む。
             <br>
-            私たちは、「忘れる」という現象に対して受動的にではなく、
-            能動的に向き合う必要がある。<br>
-            私たちは、「忘れる」ことをコントロールする必要がある。<br>
+            しかし時間が経つとともにその記憶は薄れていく。
+            <br><br>
+            大切な人の顔や名前、感動した出来事や言葉、学んだ知識や技術。
             <br>
-            もし人々が物事を忘れなくなる世界がやってきたら、<br>
-            世界はどう変わるのだろう。<br>
+            どれだけ忘れたくなくても忘れてしまう。
+            <br><br>
+            忘れることで自分のアイデンティティや価値観を失い、
             <br>
-            i9o inc.<br>
-            私たちは記憶の会社です。<br>
+            大切な人や物とのつながりを断ち切ってしまうこともある。
+            <br><br>
+            本当に忘れていいのだろうか。
             <br>
+            今まで通りでいいのだろうか。
+            <br><br>
+            さあ今こそ、変わる時。
+            <br><br>
+            私たちは「忘れる」という現象に対して受動的にではなく能動的に向き合い、
             <br>
+            「忘れる」をコントロールする。
+            <br><br>
+            私たちは記録行為そのもののあり方を根本から変革することで、
+            <br>
+            人類の創造力を加速させ拡張する。
+            <br><br>
+            もし人々が物事を忘れなくなる世界がやってきたら、
+            <br>
+            世界はどう変わるのだろう。
+            <br><br>
+            i9o inc.
+            <br>
+            記憶の会社です。
+            <br><br>
+            <br><br>
+            <br><br>
+            Why do we forget?
+            <br><br>
+            Our brain records various information and experiences in our memory every day.
+            <br><br>
+            However, over time, those memories fade away.
+            <br><br>
+            Important faces and names of people, touching events and words, and learned knowledge and skills - we forget them, no matter how much we don't want to.
+            <br><br>
+            Forgetting can result in losing our identity and values, and breaking connections with important people and things.
+            <br><br>
+            Is it really okay to forget? Is it okay to continue living as we have been?
+            <br><br>
+            Now is the time to change.
+            <br><br>
+            We should actively face the phenomenon of "forgetting" and control it.
+            <br><br>
+            If a world where people never forget things were to come, how would the world change?
+            <br><br>
+            We can revolutionize the way we record things, and accelerate and expand human creativity.
+            <br><br>
+            i9o Inc.
+            <br>
+            We are a memory company.
+            <br><br>
         </p>
     </div>
 
@@ -171,7 +214,7 @@
     function init() {
         for (let i = 0; i < numSquares; i++) {
             const square = createSquare();
-            const radius = 500 + Math.random() * 50; // 150 200  200 100
+            const radius = 500 + Math.random() * 30; // 150 200  200 100
             const angle = Math.random() * 9 * Math.PI; //2 a
             const speed = 0.005 + Math.random() * 0.004;
             animateSquare(square, radius, angle, speed);
