--- a/about.html
+++ b/about.html
@@ -178,11 +178,11 @@
             <br><br>
             We should actively face the phenomenon of "forgetting" and control it.
             <br><br>
-            If a world where people never forget things were to come, how would the world change?
-            <br><br>
             We can revolutionize the way we record things, and accelerate and expand human creativity.
             <br><br>
-            i9o Inc.
+            If a world where people never forget things were to come, how would the world change?
+            <br><br>
+            i9o inc.
             <br>
             We are a memory company.
             <br><br>
