--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
             <br><br>
             i9o inc.
             <br>
-            We are a memory company.
+            We are memory company.
             <br><br>
         </p>
     </div>
