--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <br>
         <a href="http://i9o.io/about.html">About</a><a>  🤯</a><br>
         <a href="http://i9o.io/team.html">Team</a><a>  👨‍💻</a><br>
-        <a href="http://i9o.io/">Company</a><a>  🚧</a><br>
+        <a href="http://i9o.io/company.html">Company</a><a>  🏢</a><br>
     </div>
     <script>
         const numSquares = 3000;
