--- a/company.html
+++ b/company.html
@@ -147,6 +147,9 @@
         <h3>yusuke matsubayashi</h3>
         <br>
         <br>
+        <h3>✉️ 連絡先</h3>
+        <h4>info@i9o.io</h4>
+        <br>
     </div>
 
     <script>
