--- a/team.html
+++ b/team.html
@@ -104,6 +104,10 @@
         <h3>yusuke matsubayashi</h3>
         <br>
         <br>
+        <h4>Organizer of thoughts in Iori's brain when he is in danger</h4>
+        <h3>shuhey koyama</h3>
+        <br>
+        <br>
         <h4>ヾ(๑╹◡╹)ﾉ"</h4>
         <h3><a class="iori2" href="https://twitter.com/IoriKojima09">join us</a></h3>
         <br>
