--- a/team.html
+++ b/team.html
@@ -106,7 +106,7 @@
         <br>
         <br>
         <br>
-        <h4>Organizer of thoughts in Iori's brain when he is in danger</h4>
+        <h4>Organizer of thoughts in iori's brain when he is in danger</h4>
         <h3>shuhey koyama</h3>
         <br>
         <br>
