--- a/index.html
+++ b/index.html
@@ -5,110 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>i9o</title>
-    <link rel="icon" type="image/png" href="icon.png" sizes="152x152" />
+    <link rel="icon" type="image/png" href="imgs/i9o-black.png"  />
     <link rel="stylesheet" href="style.css">
-
-    <style>
-        body {
-            margin: 0;
-            background-color: #000;
-            position: relative;
-            height: 100vh;
-            font-family: Arial, sans-serif;
-            overflow: hidden;
-        }
-
-        .square {
-            position: absolute;
-            width: 2px;
-            height: 2px;
-            background-color: #fff;
-            opacity: 1;
-        }
-
-        .text-container {
-            position: absolute;
-            top: 16px;
-            right: 16px;
-            text-align: right;
-        }
-
-        .title {
-            font-size: 100px; /* 48 */
-            color: #fff;
-            margin: 0;
-        }
-
-        .subtitle {
-            font-size: 30px;
-            color: #fff;
-            margin: 0;
-            font-weight: bold;
-        }
-
-        a {
-          font-size: 20px;
-          color: #fff;
-          font-weight: bold;
-        }
-
-    </style>
-
 </head>
 <body>
+    <img src="imgs/i9o-white.png" class="title-image" alt="i9o">
     <div class="text-container">
-        <h1 class="title">i9o</h1>
-        <p class="subtitle">We are memory company</p>
+        <p class="subtitle">is a memory company</p>
         <br>
-        <a href="http://i9o.io/about.html">About</a><a>  🤯</a><br>
-        <a href="http://i9o.io/team.html">Team</a><a>  👨‍💻</a><br>
-        <a href="http://i9o.io/company.html">Company</a><a>  🏢</a><br>
+        <a href="about/">About</a><br>
+        <a href="team/">Team</a><br>
+        <a href="company/">Company</a>
     </div>
-    <script>
-        const numSquares = 3000;
-        let centerX = window.innerWidth / 2;
-        let centerY = window.innerHeight / 2;
-
-        function createSquare() {
-            const square = document.createElement('div');
-            square.classList.add('square');
-            document.body.appendChild(square);
-            return square;
-        }
-
-        function animateSquare(square, radius, angle, speed) {
-            const x = centerX + radius * Math.cos(angle);
-            const y = centerY + radius * Math.sin(angle);
-            square.style.transform = `translate(${x}px, ${y}px)`;
-
-            requestAnimationFrame(() => {
-                animateSquare(square, radius, angle + speed, speed);
-            });
-        }
-
-        function init() {
-            for (let i = 0; i < numSquares; i++) {
-                const square = createSquare();
-                const radius = 150 + Math.random() * 200; // 150 200  200 100
-                const angle = Math.random() * 2 * Math.PI; //2 a
-                const speed = 0.001 + Math.random() * 0.008;
-                animateSquare(square, radius, angle, speed);
-            }
-        }
-
-        function updateCenter() {
-            centerX = window.innerWidth / 2;
-            centerY = window.innerHeight / 2;
-            requestAnimationFrame(updateCenter);
-        }
-
-        init();
-        updateCenter();
+    <script src="style.js"></script>
     
-    </script>
-
-    <!-- 
-    <script src="main.js"></script>
-    -->
 </body>
 </html>
