--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="imgs/i9o-white.png" class="title-image" alt="i9o">
+    <!--
+        <img src="imgs/i9o-white.png" class="title-image" alt="i9o">
+    -->
     <div class="text-container">
+        <h1 class="title">i9o</h1>
         <p class="subtitle">is a memory company</p>
         <br>
         <a href="about/">About</a><br>
