--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="imgs/i9o-black.png"  />
-    <title>i9o inc - We are memory company</title>
+    <title>About i9o inc</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,74 @@
             <a href="http://i9o.io/company/">Company</a>
         </nav>
     </header>
-    <p></p>  <!-- ここにメッセージを表示する -->
+
+    <p>
+        私たちはなぜ忘れるのだろうか。
+        <br><br>
+        脳は日々様々な情報や経験を記憶に刻む。
+        <br>
+        しかし時間が経つとともにその記憶は薄れていく。
+        <br><br>
+        大切な人の顔や名前、感動した出来事や言葉、学んだ知識や技術。
+        <br>
+        どれだけ忘れたくなくても忘れてしまう。
+        <br><br>
+        忘れることで自分のアイデンティティや価値観を失い、
+        <br>
+        大切な人や物とのつながりを断ち切ってしまうこともある。
+        <br><br>
+        本当に忘れていいのだろうか。
+        <br>
+        今まで通りでいいのだろうか。
+        <br><br>
+        さあ今こそ、変わる時。
+        <br><br>
+        私たちは「忘れる」という現象に対して受動的にではなく能動的に向き合い、
+        <br>
+        「忘れる」をコントロールする。
+        <br><br>
+        私たちは記録行為そのもののあり方を根本から変革することで、
+        <br>
+        人類の創造力を加速させ拡張する。
+        <br><br>
+        もし人々が物事を忘れなくなる世界がやってきたら、
+        <br>
+        世界はどう変わるのだろう。
+        <br><br>
+        i9o inc.
+        <br>
+        記憶の会社です。
+        <br><br>
+        <br><br>
+        <br><br>
+        Why do we forget?
+        <br><br>
+        Our brain records various information and experiences in our memory every day.
+        <br><br>
+        However, over time, those memories fade away.
+        <br><br>
+        Important faces and names of people, touching events and words, and learned knowledge and skills - we forget them, no matter how much we don't want to.
+        <br><br>
+        Forgetting can result in losing our identity and values, and breaking connections with important people and things.
+        <br><br>
+        Is it really okay to forget? Is it okay to continue living as we have been?
+        <br><br>
+        Now is the time to change.
+        <br><br>
+        We should actively face the phenomenon of "forgetting" and control it.
+        <br><br>
+        We can revolutionize the way we record things, and accelerate and expand human creativity.
+        <br><br>
+        If a world where people never forget things were to come, how would the world change?
+        <br><br>
+        i9o inc.
+        <br>
+        We are memory company.
+        <br><br>
+        <br><br>
+        <br><br>
+    </p>
+
     <script src="style.js"></script>
 </body>
 </html>
