--- a/company/index.html
+++ b/company/index.html
@@ -2,44 +2,56 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company</title>
     <link rel="icon" type="image/png" href="../imgs/i9o-black.png"  />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="text-container">
-        <h1><a class="title" href="http://i9o.io/index.html">i9o</a></h1>
-        <p class="subtitle">Company information</p>
+    <header>
+        <h1><a class="title" href="http://i9o.io">i9o</a></h1>
+        <p class="subtitle">We are memory company.</p>
+        <nav>
+            <a href="http://i9o.io/about/">About</a>
+            <a href="http://i9o.io/team/">Team</a>
+            <a href="http://i9o.io/company/">Company</a>
+        </nav>
+    </header>
+    <div>
         <br>
-        <h3>＊23年5月時点の予定情報も含まれます</h3>
-        <h3>＊include information for May 2023</h3>
+        <p>＊23年5月時点の予定情報も含まれます</p>
+        <p>＊include information for May 2023</p>
         <br>
-        <h3>🏢 商号</h3>
-        <h4>アイナインオー株式会社</h4>
-        <h3>i9o inc</h3>
+        <h3>商号</h3>
+        <p>アイナインオー株式会社</p>
+        <p>i9o inc.</p>
         <br>
-        <h3>💰 資本金</h3>
-        <h4>1,000,000円</h4>
-        <h3>￥1,000,000</h3>
         <br>
-        <h3>🗾 本店所在地</h3>
-        <h4>大阪府 吹田市</h4>
-        <h3>Suita, Japan</h3>
+        <h3>資本金</h3>
+        <p>1,000,000円</p>
+        <p>￥1,000,000</p>
         <br>
-        <h3>🎨 開発拠点</h3>
-        <h4>京都府 京都市</h4>
-        <h3>Kyoto, Japan</h3>
         <br>
-        <h3>🙆‍♂️ 創業者</h3>
-        <h4>小島 伊織</h4>
-        <h3>iori kojima</h3>
-        <h4>松林 由佑</h4>
-        <h3>yusuke matsubayashi</h3>
+        <h3>本店所在地</h3>
+        <p>大阪府 吹田市</p>
+        <p>Suita, Japan</p>
         <br>
-        <h3>✉️ 連絡先</h3>
-        <h4>info@i9o.io</h4>
+        <br>
+        <h3>開発拠点</h3>
+        <p>京都府 京都市</p>
+        <p>Kyoto, Japan</p>
+        <br>
+        <br>
+        <h3>創業者</h3>
+        <p>小島 伊織</p>
+        <p>iori kojima</p>
+        <br>
+        <p>松林 由佑</p>
+        <p>yusuke matsubayashi</p>
+        <br>
+        <br>
+        <h3>連絡先</h3>
+        <p>info@i9o.io</p>
         <br>
         <br>
         <br>
