--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1><a class="title" href="http://i9o.io">i9o</a></h1>
-        <p class="subtitle">We are memory company.</p>
+        <p class="subtitle">We are memory company</p>
         <nav>
             <a href="http://i9o.io/about/">About</a>
             <a href="http://i9o.io/team/">Team</a>
