--- a/company/index.html
+++ b/company/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1><a class="title" href="http://i9o.io">i9o</a></h1>
-        <p class="subtitle">We are memory company.</p>
+        <p class="subtitle">Company information</p>
     </header>
     <div>
         <br>
