--- a/company/index.html
+++ b/company/index.html
@@ -17,27 +17,27 @@
         <p>＊23年5月時点の予定情報も含まれます</p>
         <p>＊include information for May 2023</p>
         <br>
-        <h3>商号</h3>
+        <h3>商号 / Business name </h3>
         <p>アイナインオー株式会社</p>
         <p>i9o inc.</p>
         <br>
         <br>
-        <h3>資本金</h3>
+        <h3>資本金 / Capital stock</h3>
         <p>1,000,000円</p>
         <p>￥1,000,000</p>
         <br>
         <br>
-        <h3>本店所在地</h3>
+        <h3>本店所在地 / Head office location</h3>
         <p>大阪府 吹田市</p>
         <p>Suita, Japan</p>
         <br>
         <br>
-        <h3>開発拠点</h3>
+        <h3>開発拠点 / Development center</h3>
         <p>京都府 京都市</p>
         <p>Kyoto, Japan</p>
         <br>
         <br>
-        <h3>創業者</h3>
+        <h3>創業者 / Founder</h3>
         <p>小島 伊織</p>
         <p>iori kojima</p>
         <br>
@@ -45,7 +45,7 @@
         <p>yusuke matsubayashi</p>
         <br>
         <br>
-        <h3>連絡先</h3>
+        <h3>連絡先 / Contact</h3>
         <p>info@i9o.io</p>
         <br>
         <br>
