--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
         <br>
         今まで通りでいいのだろうか。
         <br><br>
-        さあ今こそ、変わる時。
+        さあ、変わる時が来た。
         <br><br>
         私たちは「忘れる」という現象に対して受動的にではなく能動的に向き合い、
         <br>
@@ -42,7 +42,7 @@
         <br>
         人類の創造力を加速させ拡張する。
         <br><br>
-        もし人々が物事を忘れなくなる世界がやってきたら、
+        もし忘れることがない未来がやってきたら、
         <br>
         世界はどう変わるのだろう。
         <br><br>
@@ -57,12 +57,18 @@
         Our brain records various information and experiences in our memory every day.
         <br><br>
         However, over time, those memories fade away.
+        <br>
+        Important faces and names of people, touching events and words, and learned knowledge and skills.
+        <br>
+        We forget them, no matter how much we don't want to.
         <br><br>
-        Important faces and names of people, touching events and words, and learned knowledge and skills - we forget them, no matter how much we don't want to.
+        Forgetting can result in losing our identity and values, 
+        <br>
+        and breaking connections with important people and things.
         <br><br>
-        Forgetting can result in losing our identity and values, and breaking connections with important people and things.
-        <br><br>
-        Is it really okay to forget? Is it okay to continue living as we have been?
+        Is it really okay to forget? 
+        <br>
+        Is it okay to continue living as we have been?
         <br><br>
         Now is the time to change.
         <br><br>
@@ -70,7 +76,9 @@
         <br><br>
         We can revolutionize the way we record things, and accelerate and expand human creativity.
         <br><br>
-        If a world where people never forget things were to come, how would the world change?
+        If a world where people never forget things were to come, 
+        <br>
+        how would the world change?
         <br><br>
         i9o inc.
         <br>
