--- a/company/index.html
+++ b/company/index.html
@@ -29,12 +29,12 @@
         <br>
         <h3>本店所在地 / Head office location</h3>
         <p>大阪府 吹田市</p>
-        <p>Suita, Japan</p>
+        <p>Suita city, Osaka, Japan</p>
         <br>
         <br>
         <h3>開発拠点 / Development center</h3>
         <p>京都府 京都市</p>
-        <p>Kyoto, Japan</p>
+        <p>Kyoto city, Kyoto, Japan</p>
         <br>
         <br>
         <h3>創業者 / Founder</h3>
