--- a/company/index.html
+++ b/company/index.html
@@ -33,6 +33,11 @@
         <p>i9o inc.</p>
         <br>
         <br>
+        <h3>事業内容 / Bisiness activities</h3>
+        <p>非公表</p>
+        <p>private</p>
+        <br>
+        <br>
         <h3>資本金 / Capital stock</h3>
         <p>1,000,000円</p>
         <p>￥1,000,000</p>
